# rust-envoy-filter

./: Cargo.toml  Dockerfile  Makefile  README.md
examples/: envoy-filter.yaml
src/: jwt.rs  lib.rs
tests/invalid/: private.pem  public.pem
tests/valid/: jwt  private.pem  public.pem
