[package]
authors = ["Aaron Weisberg <aaronweisberg@gmail.com>"]
edition = "2018"
name = "cargo"
version = "0.1.0"
[dependencies]
anyhow = "*"
log = "0.4.8"
proxy-wasm = "0.1"
serde = "*"
serde_json = "*"
serde_yaml = "*"
thiserror = "*"

[dependencies.jwt-simple]
version = "*"

[lib]
crate-type = ["cdylib"]
log = "0.4"
path = "src/lib.rs"
